# remindy

./: .gitignore  Cargo.toml  LICENSE  README.md  linux_install_script.sh  linux_install_x86_64.sh  package-lock.json  reminders.json
.github/workflows/: clippy.yml  rust.yml  version.yml
client/: Cargo.toml
client/src/: key_reader.rs  main.rs  reminders.rs  status_box.rs
config/: Cargo.toml
config/src/: lib.rs
dbg_db/: reminders.json  remindy.example.toml
i3blocks_client/: Cargo.toml
i3blocks_client/src/: main.rs
js-client/: package-lock.json  package.json
js-client/.svelte-kit/: ambient.d.ts
js-client/src/routes/: +layout.svelte  +page.svelte
reminder/: Cargo.toml
reminder/src/: lib.rs  past_event.rs  reminder.rs
remindy/: Cargo.toml  install-remindy.sh  reminders.json
remindy/dbg_db/: reminders-library.json  reminders.json
remindy/src/: api.rs  main.rs  reminder.rs
remindy/src/interface/: key_reader.rs  mod.rs  past_event.rs  reminders.rs  status.rs
server/: Cargo.toml
server/src/: api.rs  main.rs
simple_js_frontend/: package-lock.json  package.json  svelte.config.js
simple_js_frontend/src/routes/: +layout.svelte  +page.svelte
src/: main.rs
wasm_client/: Cargo.toml  index.html  tailwind.config.js
wasm_client/src/: App.rs  main.rs
wasm_client/style/: output.css
