[package]
name = "remindy"
version = "0.1.0"
edition = "2021"
authors = ["John Doe <johndoe@example.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4.5.10"
colored = "2"
soloud = "1.0.2"
chrono = "0.4.23"
curl = "0.4.44"