[package]
name = "client"
version = "3.0.0"
edition = "2021"
authors = ["Jonas Focke <test-test@test.com>"]
description = "Client for a timer/reminder program with vim-oriented shortcuts for the terminal"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
time = { version = "0.3.28", features = ["serde", "local-offset", "parsing", "formatting"] }
duration-string = "0.3.0"
crossterm = "0.27.0"
colored = "2.0.4"
msgbox = "0.7.0"
rodio = "0.17.1"
home = "0.5.5"
reminder = { path = "../reminder" }
reqwest = { version = "0.11.23", features = ["blocking", "json"] }

[features]
i3 = []

[lints]
workspace = true
