[package]
name = "config"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Focke <test-test@test.com>"]
description = "The remindy config package"
license = "MIT"

[dependencies]
serde = { version = "1.0.182", features = ["derive"] }
toml = "0.8.8"
reminder = { path = "../reminder" }

[lints]
workspace = true
