[package]
name = "reminder"
version = "3.0.0"
edition = "2021"
authors = ["Jonas Focke <test-test@test.com>"]
description = "The remindy library package"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
time = { version = "0.3.31", features = ["serde", "local-offset", "parsing", "formatting"] }
colored = "2.0.4"
json_store_rs = { git = "https://github.com/JonasFocke01/json_store_rs.git" }

[features]
colored = []

[lints]
workspace = true
