[package]
name = "remindy"
version = "1.3.0"
edition = "2021"
authors = ["Jonas Focke <test-test@test.com>"]

[dependencies]
axum = { version = "0.6.2", features = ['multipart'] }
tower-http = { version = "0.4.3", features = ['cors'] }
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
time = { version = "0.3.28", features = ["serde", "local-offset", "parsing", "formatting"] }
crossterm = "0.27.0"
notify-rust = "4.9.0"
duration-string = "0.3.0"
colored = "2.0.4"
msgbox = "0.7.0"
rodio = "0.17.1"
