[package]
name = "remindy-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.2", features = ['multipart'] }
tower-http = { version = "0.4.3", features = ['cors'] }
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
time = { version = "0.3.28", features = ["serde", "local-offset"] }
crossterm = "0.27.0"
