[package]
name = "server"
version = "0.0.1"
edition = "2021"
authors = ["Jonas Focke <test-test@test.com>"]
description = "The server for remindy"
license = "MIT"

[dependencies]
axum = { version = "0.7.4", features = ['multipart'] }
tower-http = { version = "0.5.1", features = ['cors'] }
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
time = { version = "0.3.28", features = ["serde", "local-offset", "parsing", "formatting"] }
reminder = { path = "../reminder" }
config = { path = "../config" }
axum-util = "0.2.2"
json_store_rs = { git = "https://github.com/JonasFocke01/json_store_rs.git" }

[lints]
workspace = true
