[package]
name = "wasm_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.5", features = ["csr", "nightly"] }
# reqwest = { version = "0.11.23", features = ["blocking", "json"] }
# reminder = { path = "../reminder" }
reqwasm = "0.5"
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true

[package.metadata.leptos]
style-file = "style/output.css"
